Swagger voor favorites endpoint
