# server/swagger.json
@@ -985,6 +985,78 @@
         }
       },
 
+      "FavoriteShort": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The unique identifier for the favorite",
+            "example": "550e8400-e29b-41d4-a716-446655440000"
+          },
+          "userId": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The userId of the user that made the favorite",
+            "example": "660e8400-e29b-41d4-a716-446655440000"
+          },
+          "learningPathId": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The id of the favorited learningPath",
+            "example": "770e8400-e29b-41d4-a716-446655440000"
+          },
+          "progress": {
+            "type": "array",
+            "description": "A list of the indexes of the already completed nodes",
+            "items": {
+              "type": "integer"
+            },
+            "example": [0, 1, 2, 4]
+          }
+        }
+      },
+
+      "FavoriteDetail": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The unique identifier for the favorite",
+            "example": "550e8400-e29b-41d4-a716-446655440000"
+          },
+          "userId": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The userId of the user that made the favorite",
+            "example": "660e8400-e29b-41d4-a716-446655440000"
+          },
+          "learningPathId": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The id of the favorited learningPath",
+            "example": "770e8400-e29b-41d4-a716-446655440000"
+          },
+          "progress": {
+            "type": "array",
+            "description": "A list of the indexes of the already completed nodes",
+            "items": {
+              "type": "integer"
+            },
+            "example": [0, 1, 2, 4]
+          },
+          "learningPath": {
+            "description": "The favorited learningPath",
+            "$ref": "#/components/schemas/LearningPathShort"
+          },
+          "user": {
+            "description": "The user that made the favorite",
+            "$ref": "#/components/schemas/UserShort"
+          }
+        }
+      },
+
       "PaginatedResponse": {
         "type": "object",
         "properties": {
@@ -1513,6 +1585,20 @@
         },
         "required": ["groupId", "nodeId", "submissionType", "submission"]
       },
+
+      "FavoriteCreate": {
+        "type": "object",
+        "properties": {
+          "learningPathId": {
+            "type": "string",
+            "format": "uuid",
+            "description": "The id of the learningPath you want to favorite",
+            "example": "550e8400-e29b-41d4-a716-446655440002"
+          }
+        },
+        "required": ["learningPathId"]
+      },
+
       "FileSubmissionSchema": {
         "type": "object",
         "properties": {
